updates 7th Jan

--- a/app/views/12-0-0/ilr_data_submitted.html
+++ b/app/views/12-0-0/ilr_data_submitted.html
@@ -22,13 +22,13 @@
 <p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p>
 
 <h3 class="govuk-heading-m">What happens next?</h3>
-		<p>We’ve sent an email to sam.smith@college.ac.uk to confirm we’ve received your file.</p>
-		<p>We will email you again to let you know when your funding breakdown for R02 and related reports are ready to view.</p>
+		<p>Look out for the email we’ve sent to sam.smith@college.ac.uk that confirms we’ve received your file.</p>
+		<p>We’ll email you again when your reports and funding breakdown for R02 are ready. </p>
 
     {% from "inset-text/macro.njk" import govukInsetText %}
 
 {{ govukInsetText({
-  text: "This usually takes about 30 minutes."
+  text: "This usually takes 30 minutes."
 }) }}
 
     <details class="govuk-details">
@@ -38,8 +38,8 @@
         </span>
       </summary>
       <div class="govuk-details__text">
-          <p>If your email address is wrong, you’ll need to <a href="#">update it in your IdAMS account</a>.</p>
-          <p>If you haven’t received an email, it may be in your junkmail folder. <a href="./return-period.html">Check the R02 reports area</a> as your reports may still have been generated.</p>
+          <p>If your email address is wrong, you’ll need to <a href="#">update your email address in your IdAMS account</a>.</p>
+          <p>If you haven’t received an email, it may be in your junk mail folder. <a href="./return-period.html">Check the R02 reports area</a> as your reports may still have been generated.</p>
       </div>
     </details>
 
