--- a/app/views/12-0-0/includes/sidebar_help_related_ESFA.html
+++ b/app/views/12-0-0/includes/sidebar_help_related_ESFA.html
@@ -3,7 +3,7 @@
             Help and support
           </h2>
 	<h3 class="govuk-heading-s">ESFA support desk</h3>
-	<p>Telephone: 0370 267 0001<br/>
+	<p>Telephone: <a href="tel:0370 267 0001">0370 267 0001<a/><br/>
 	Monday to Thursday, 8:30am to 5:00pm<br/>
 	Friday, 8:30am to 4:00pm<br/>
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
@@ -14,9 +14,9 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a href="./reports">
-                  Reports 
+                  Reports
                 </a>
-              </li> 
+              </li>
 				<li>
                 <a href="./step-by-step.html">
                   Submit learner data:step-by-step
@@ -28,7 +28,7 @@
                 </a>
               </li>
             </ul>
-          </nav>-->	
+          </nav>-->
 			 <h2 class="govuk-heading-m" id="subsection-title">
            Related content
           </h2>
@@ -36,12 +36,12 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/728764/ProviderSupportManual_18_19_v1.pdf" target="_blank">
-                  Provider support manual for 2018 to 2019  
+                  Provider support manual for 2018 to 2019
                 </a>
-              </li> 
+              </li>
 				      <li>
                 <a href="https://www.gov.uk/government/publications/sfa-supplementary-data-collection" target="_blank">
-                  ESFA: supplementary data collection guidance  
+                  ESFA: supplementary data collection guidance
                 </a>
               </li>
             </ul>
