--- a/app/views/12-0-0/your_files_uploading_checking_errors.html
+++ b/app/views/12-0-0/your_files_uploading_checking_errors.html
@@ -12,18 +12,18 @@
     <div class="govuk-grid-column-two-thirds">
 
   <h2 class="govuk-heading-xl">
-    Your file’s uploading
+    Just checking for errors…
   </h2>
 
 	  <!--<p>{{ uploadingFile }}</p>-->
 	  <p><img src="/public/images/spinner-gif-13.gif"/></p>
 
-<script type="text/javascript">
+        <script type="text/javascript">
     function Redirect()
     {
-        window.location="./your_files_uploading_checking_errors.html";
+        window.location="./theres_a_problem.html";
     }
-    setTimeout('Redirect()', 3000);
+    setTimeout('Redirect()', 5000);   
 </script>
 
 
