--- a/app/views/index.html
+++ b/app/views/index.html
@@ -37,7 +37,7 @@
                 <li><a href="12-0-0/theres_a_problem.html">Removed error with grey box and added into exclamation text</a></li>
                 <li><a href="12-0-0/ilr_data_submitted.html">Email info highlighted</a></li>
                 <li><a href="12-0-0/return-period.html">Updated the table view to cards type view</a></li>
-                <li><a href="12-0-0/"></a></li>
+                <li><a href="12-0-0/"></a>Updated telephone number with a link</li>
                 <li><a href="12-0-0/"></a></li>
                 <!-- <li></li>
                 <li></li> -->
