--- a/app/views/12-0-0/choose_file_to_upload.html
+++ b/app/views/12-0-0/choose_file_to_upload.html
@@ -12,7 +12,7 @@
   <div class="govuk-grid-column-two-thirds">
           <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
   <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
-     Last file submitted on 28 October 2018
+     Last file submitted on 28 October 2018 at 2.45pm
   </h2>
   <div class="govuk-highlight-summary__body">
       <p>Jane Smith submitted file SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</p><p> <a href="return-period.html">View submission history</a></p>
@@ -21,20 +21,20 @@
 
     <form action="your_files_uploading" method="get" class="form">
 	  <h1 class="govuk-heading-xl">Choose ILR file to upload <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
-		<p>Before uploading your file you should make sure that:</p>
+		<p>Your file must be:</p>
 		<ul class="govuk-list govuk-list--bullet">
-      <li>it’s in an XML or Zip format</li>
-			<li>the data it contains is as complete as possible</li>
-			<li>the data it contains is as accurate as possible</li>
+      <li>an XML or Zip file</li>
+			<li>as complete as possible</li>
+			<li>as accurate as possible</li>
 		</ul>
 	  <div class="govuk-form-group">
-      <label class="govuk-label govuk-!-font-weight-bold" for="file-upload-1">
+      <!-- <label class="govuk-label govuk-!-font-weight-bold" for="file-upload-1">
         Upload a file
-      </label>
+      </label> -->
       <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
       <input type="hidden" name="whattosubmit" value="{{ data['whattosubmit'] }}">
     </div>
-	
+
 		<button class="govuk-button">
       Upload file
     </button>
