--- a/app/views/12-0-0/includes/sidebar_help.html
+++ b/app/views/12-0-0/includes/sidebar_help.html
@@ -3,7 +3,7 @@
             Help and support
           </h2>
 	<h3 class="govuk-heading-s">ESFA support desk</h3>
-	<p>Telephone: 0370 267 0001<br/>
+	<p>Telephone: <a href="tel:0370 267 0001">0370 267 0001<a/><br/>
 	Monday to Thursday, 8:30am to 5:00pm<br/>
 	Friday, 8:30am to 4:00pm<br/>
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
@@ -15,9 +15,9 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a href="./reports">
-                  Reports 
+                  Reports
                 </a>
-              </li> 
+              </li>
 				<li>
                 <a href="./step-by-step.html">
                   Submit learner data:step-by-step
@@ -29,6 +29,6 @@
                 </a>
               </li>
             </ul>
-          </nav>-->		
-			 
+          </nav>-->
+
         </aside>
