--- a/app/views/12-0-0/includes/sidebar_help_related.html
+++ b/app/views/12-0-0/includes/sidebar_help_related.html
@@ -3,7 +3,7 @@
             Help and support
           </h2>
 	<h3 class="govuk-heading-s">ESFA support desk</h3>
-	<p>Telephone: 0370 267 0001<br/>
+	<p>Telephone: <a href="tel:0370 267 0001">0370 267 0001<a/><br/>
 	Monday to Thursday, 8:30am to 5:00pm<br/>
 	Friday, 8:30am to 4:00pm<br/>
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
@@ -14,21 +14,21 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a href="./reports">
-                  Reports 
+                  Reports
                 </a>
-              </li> 
+              </li>
 				<li>
                 <a href="./step-by-step.html">
                   Submit learner data:step-by-step
                 </a>
-              </li>	
+              </li>
                  <li>
                 <a href="./useful_tools.html">
                   Useful tools
                 </a>
               </li>
             </ul>
-          </nav>-->	
+          </nav>-->
 			 <h2 class="govuk-heading-m" id="subsection-title">
            Related content
           </h2>
@@ -36,19 +36,19 @@
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a href="https://www.gov.uk/government/publications/ilr-guides-and-templates-for-2017-to-2018" target="_blank">
-                  ILR provider support manual - guide to making ILR returns  
+                  ILR provider support manual - guide to making ILR returns
                 </a>
-              </li> 
+              </li>
 				<li>
                 <a href="https://www.gov.uk/education/data-collection-for-further-education-providers" target="_blank">
-                  ILR specification, validation and funding rules  
+                  ILR specification, validation and funding rules
                 </a>
               </li>
 				<li>
                 <a href="https://www.gov.uk/government/publications/ilr-data-check-that-it-meets-standards-and-quality-requirements" target="_blank">
-                  ILR data: check that it meets standards and quality requirements 
+                  ILR data: check that it meets standards and quality requirements
                 </a>
-              </li>  
+              </li>
             </ul>
           </nav>
         </aside>
