--- a/app/views/12-0-0/includes/sidebar_reports.html
+++ b/app/views/12-0-0/includes/sidebar_reports.html
@@ -3,7 +3,7 @@
             Help and support
           </h2>
 	<h3 class="govuk-heading-s">ESFA support desk</h3>
-	<p>Telephone: 0370 267 0001<br/>
+	<p>Telephone: <a href="tel:0370 267 0001">0370 267 0001<a/><br/>
 	Monday to Thursday, 8:30am to 5:00pm<br/>
 	Friday, 8:30am to 4:00pm<br/>
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
@@ -17,13 +17,13 @@
                 <a href="./what_data_do_you_want_to_submit.html">
                   Resubmit data
                 </a>
-              </li> 
+              </li>
 				<!--<li>
                 <a href="./step-by-step.html">
                   Submit learner data:step-by-step
                 </a>
-              </li>-->				
+              </li>-->
             </ul>
-          </nav>		
-			 
+          </nav>
+
         </aside>
