--- a/app/views/12-0-0/includes/sidebar_start.html
+++ b/app/views/12-0-0/includes/sidebar_start.html
@@ -3,7 +3,7 @@
     Help and support
   </h2>
 	<h3 class="govuk-heading-s">ESFA support desk</h3>
-	<p>Telephone: 0370 267 0001<br/>
+	<p>Telephone: <a href="tel:0370 267 0001">0370 267 0001<a/><br/>
 	   Monday to Thursday, 8:30am to 5:00pm<br/>
 	   Friday, 8:30am to 4:00pm<br/>
 	</p>
@@ -15,14 +15,14 @@
     <ul class="govuk-list govuk-!-font-size-16">
       <li>
         <a href="https://www.gov.uk/guidance/how-to-become-an-approved-training-provider-and-bid-for-funding" target="_blank">
-          How to become an approved training provider 
+          How to become an approved training provider
         </a>
       </li>
       <li>
         <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/715492/ILRSpecification2018-2019v3.pdf" target="_blank">
           Timetable of submission deadlines
         </a>
-      </li>                          
+      </li>
     </ul>
   </nav>
 </aside>
