--- a/app/views/12-0-0/return-period.html
+++ b/app/views/12-0-0/return-period.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">Reports</h1>
 
- <p>If you need to correct the data you've submitted, <a href="what_data_do_you_want_to_submit.html">submit another file</a>.</p>
+ <p>To correct data you’ve already submitted, <a href="what_data_do_you_want_to_submit.html">submit another file</a>.</p>
 
  <div class="govuk-tabs" data-module="tabs">
   <h2 class="govuk-tabs__title">
@@ -22,150 +22,82 @@
   <ul class="govuk-tabs__list">
     <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab govuk-tabs__tab--selected" href="#past-day">
-        Submission history
+        Current submissions
       </a>
     </li>
     <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab" href="#past-week">
-        Reports history
+        Past submissions
       </a>
     </li>
 
   </ul>
 
   <section class="govuk-tabs__panel" id="past-day">
-    <h2 class="govuk-heading-l" id="submission">Submission history  <span class="govuk-caption-l">RO2</span></h2>
-<p>Each time you submit a new file your reports will be updated. To view your latest reports you should download the reports for your most recent submission.</p>
+    <h2 class="govuk-heading-l" id="submission">Current submissions</h2>
+      <p>Find all the files submitted on your account and their reports below. For final reports, see the ‘Past submissions’ tab.</p>
 
-      <h3 class="govuk-heading-m">Submissions for 2018 to 2019</h3>
+      <h3 class="govuk-heading-m">2018/19 submissions<span class="govuk-caption-l">RO3</span></h3>
+      <p class="">You haven’t submitted any files for this submission period yet. <a href="#" >Submit a file</a></p>
 
-      <p class="govuk-heading-s">Date and time: 30 October 2018 at 1:00pm <span>Reference: 300 </span></p>
-      <p>Type: ILR</p>
-      <p>File: <a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></p>
-      <p>Submitted by: Bob Afett <span><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></span></p>
+      <span class="govuk-caption-l">RO2</span>
+
+      <p class="govuk-heading-s">30 October 2018 at 1:00pm (ILR submission)</p>
+      <p class=""><strong>Your reports</strong><br>
+      <a href="#" title="Download REPORTS-0312210-091400.zip">Errors and warnings report</a> (CSV, 78KB)<br>
+      <a href="#" title="Download REPORTS-0312210-091400.zip">Data match report</a> (CSV, 56KB)</p>
+      <p><strong>Ref:</strong> 300<br>
+      <strong>Submitted file:</strong> <a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a><br>
+      <strong>Submitted by:</strong> Bob Afett</p>
 <hr>
-      <p class="govuk-heading-s">Date and time: 30 October 2018 at 8:00am <span>Reference: 295 </span></p>
-      <p>Type: ESF</p>
-      <p>File: <a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></p>
-      <p>Submitted by: Bob Afett <span> Report Failed</span></p>
+      <p class="govuk-heading-s">30 October 2018 at 8:00am (ESF submission)</p>
+      <p class=""><strong>Your reports</strong><br>
+      Report failed<br>
+      <a href="#" title="Download REPORTS-0312210-091400.zip">Data match report</a> (CSV, 56KB)</p>
+      <p><strong>Ref:</strong> 295<br>
+      <strong>Submitted file:</strong> <a href="#">ILR-12345678-1819-20180806-05092018-02.CSV</a><br>
+      <strong>Submitted by:</strong> Bob Afett</p>
 <hr>
-      <p class="govuk-heading-s">Date and time: 24 October 2018 at 1:00pm <span>Reference: 200 </span></p>
-      <p>Type: ILR</p>
-      <p>File: <a href="#">ILR-12345678-1819-20180806-05092018-01.XML</a></p>
-      <p>Submitted by: Bob Afett <span><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></span></p>
+      <p class="govuk-heading-s">24 October 2018 at 1:00pm (ILR submission)</p>
+      <p class=""><strong>Your reports</strong><br>
+      <a href="#" title="Download REPORTS-0312210-091400.zip">Errors and warnings report</a> (CSV, 78KB)<br>
+      <a href="#" title="Download REPORTS-0312210-091400.zip">Data match report</a> (CSV, 56KB)</p>
+      <p><strong>Ref:</strong> 200<br>
+      <strong>Submitted file:</strong> <a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a><br>
+      <strong>Submitted by:</strong> Bob Afett</p>
 <hr>
-
-              <!-- <table class="govuk-table">
-  <caption class="govuk-table__caption govuk-visually-hidden">Dates and file name</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Date</th>
-        <th class="govuk-table__header" scope="col">Type</th>
-      <th class="govuk-table__header" scope="col">File</th>
-         <th class="govuk-table__header" scope="col">Submitted by</th>
-        <th class="govuk-table__header" scope="col">Reference</th>
-    <th class="govuk-table__header" scope="col">Reports</th>
-
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">30 October 2018 at 1:00pm</th>
-        <td class="govuk-table__cell">ILR</td>
-        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></td>
-        <td class="govuk-table__cell">Bob Afett</td>
-         <td class="govuk-table__cell">300</td>
-        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
-
-    </tr>
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">30 October 2018 at 8:00am</th>
-        <td class="govuk-table__cell">ESF</td>
-        <td class="govuk-table__cell"><a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></td>
-        <td class="govuk-table__cell">Bob Afett</td>
-         <td class="govuk-table__cell">295</td>
-        <td class="govuk-table__cell">Failed</td>
-
-    </tr>
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">24 October 2018 at 1:00pm</th>
-        <td class="govuk-table__cell">ILR</td>
-        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-01.XML</a></td>
-        <td class="govuk-table__cell">Bob Afett</td>
-         <td class="govuk-table__cell">200</td>
-        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
-
-    </tr>
-  </tbody>
-</table> -->
-
       <h3 class="govuk-heading-m">Older submissions</h3>
-      <!-- <table class="govuk-table">
-  <caption class="govuk-table__caption govuk-visually-hidden">Dates and file name</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Date and time</th>
-        <th class="govuk-table__header" scope="col">Type</th>
-      <th class="govuk-table__header" scope="col">File</th>
-         <th class="govuk-table__header" scope="col">Submitted by</th>
-        <th class="govuk-table__header" scope="col">Reference</th>
-    <th class="govuk-table__header" scope="col">Reports</th>
 
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">14 July 2018 at 1:00pm</th>
-        <td class="govuk-table__cell">ILR</td>
-        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></td>
-        <td class="govuk-table__cell">Bob Afett</td>
-         <td class="govuk-table__cell">300</td>
-        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
-
-    </tr>
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">18 June 2018 at 1:00pm</th>
-        <td class="govuk-table__cell">ESF</td>
-        <td class="govuk-table__cell"><a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></td>
-        <td class="govuk-table__cell">Bob Afett</td>
-         <td class="govuk-table__cell">295</td>
-        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
-
-    </tr>
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">19 May 2018 at 1:00pm</th>
-        <td class="govuk-table__cell">ILR</td>
-        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-01.XML</a></td>
-        <td class="govuk-table__cell">Bob Afett</td>
-         <td class="govuk-table__cell">200</td>
-        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
-
-    </tr>
-  </tbody>
-</table> -->
-
-
-<p class="govuk-heading-s">Date and time: 14 July 2018 at 1:00pm <span>Reference: 300 </span></p>
-<p>Type: ILR</p>
-<p>File: <a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></p>
-<p>Submitted by: Bob Afett <span><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></span></p>
+      <p class="govuk-heading-s">14 July 2018 at 1:00pm (ILR submission)</p>
+      <p class=""><strong>Your reports</strong><br>
+      <a href="#" title="Download REPORTS-0312210-091400.zip">Errors and warnings report</a> (CSV, 78KB)<br>
+      <a href="#" title="Download REPORTS-0312210-091400.zip">Data match report</a> (CSV, 56KB)</p>
+      <p><strong>Ref:</strong> 195<br>
+      <strong>Submitted file:</strong> <a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a><br>
+      <strong>Submitted by:</strong> Bob Afett</p>
 <hr>
-<p class="govuk-heading-s">Date and time: 18 June 2018 at 1:00pm <span>Reference: 295 </span></p>
-<p>Type: ESF</p>
-<p>File: <a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></p>
-<p>Submitted by: Bob Afett <span><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></span></p>
-<hr>
-<p class="govuk-heading-s">Date and time: 19 May 2018 at 1:00pm <span>Reference: 200 </span></p>
-<p>Type: ILR</p>
-<p>File: <a href="#">ILR-12345678-1819-20180806-05092018-01.XML</a></p>
-<p>Submitted by: Bob Afett <span><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></span></p>
+      <p class="govuk-heading-s">18 June 2018 at 8:00am (ESF submission)</p>
+      <p class=""><strong>Your reports</strong><br>
+        <a href="#" title="Download REPORTS-0312210-091400.zip">Errors and warnings report</a> (CSV, 78KB)<br>
+        <a href="#" title="Download REPORTS-0312210-091400.zip">Data match report</a> (CSV, 56KB)</p>
+      <p><strong>Ref:</strong> 125<br>
+      <strong>Submitted file:</strong> <a href="#">ILR-12345678-1819-20180806-05092018-02.CSV</a><br>
+      <strong>Submitted by:</strong> Bob Afett</p>
 <hr>
 
+      <p class="govuk-heading-s">19 May 2018 at 1:00pm (ILR submission)</p>
+      <p class=""><strong>Your reports</strong><br>
+        <a href="#" title="Download REPORTS-0312210-091400.zip">Errors and warnings report</a> (CSV, 78KB)<br>
+        <a href="#" title="Download REPORTS-0312210-091400.zip">Data match report</a> (CSV, 56KB)</p>
+      <p><strong>Ref:</strong> 100<br>
+      <strong>Submitted file:</strong> <a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a><br>
+      <strong>Submitted by:</strong> Bob Afett</p>
+<hr>
+</section>
 
 
-  </section>
   <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="past-week">
-    <h2 class="govuk-heading-l" id="reports">Reports history</h2>
+    <h2 class="govuk-heading-l" id="reports">Past submissions</h2>
         <p>The reports download includes the last validation report and submission files. You can <a href="#">view period end reports</a> in the Hub.</p>
         <h3 class="govuk-heading-m">Academic year 2018 to 2019</h3>
 
