--- a/app/views/12-0-0/start.html
+++ b/app/views/12-0-0/start.html
@@ -11,19 +11,19 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Submit learner data      
-      </h1>    
+        Submit learner data
+      </h1>
 
 		<p class="govuk-body-l">This service is for training providers that receive funding directly from the Education and Skills Funding Agency.</p>
 
 		<p>Use this service to validate and submit:</p>
 		<ul class="govuk-list govuk-list--bullet">
-			<li>Individualised learner records (ILR)</li> 
-			<li>Earnings adjustment statements (EAS)</li> 
-			<li>ESF (European Social Fund) supplementary data</li>
+			<li>Individualised Learner Records (ILR)</li>
+			<li>Earnings Adjustment Statements (EAS)</li>
+			<li>European Social Fund (ESF) supplementary data</li>
 		</ul>
-        
-        
+
+
 
 		<p>You can also view and download reports for data you’ve submitted.</p>
 		<a href="./idams.html" role="button" class="govuk-button govuk-button--start">
@@ -36,8 +36,8 @@
 			<li>your IdAMS (Information Management Services system) login details</li>
 			<li>an XML or Zip file to upload - for ILR data</li>
 			<li>a CSV file to upload - for EAS and ESF data</li>
-		</ul>  
-		    
+		</ul>
+
     </div>
 	  <div class="govuk-grid-column-one-third">
         {% include "./includes/sidebar_start.html" %}
