--- a/app/views/12-0-0/theres_a_problem.html
+++ b/app/views/12-0-0/theres_a_problem.html
@@ -15,7 +15,7 @@
     <div class="govuk-grid-column-two-thirds">
 
 
-		<h1 class="govuk-heading-xl">Check errors before submitting your ILR file<span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
+		<h1 class="govuk-heading-xl">Review errors before submitting your ILR file<span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
 
 
 		<p><span class="govuk-!-font-weight-bold">Learners in file</span>: 3,893</p>
@@ -24,8 +24,8 @@
 
 		<p><span class="govuk-!-font-weight-bold">Warnings in file</span>: 2,291 (affecting 1,027 learners)</p>
 
-		<p>Use the report below to fix the errors in your file.
-<a href="#">Errors and warnings report</a> (CSV, 78KB)</p>
+		<p>Use the report below to fix the errors in your file.<br>
+        <a href="#">Errors and warnings report</a> (CSV, 78KB)</p>
 
 
 
@@ -51,14 +51,14 @@
     <div class="govuk-radios">
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="fix-errors" name="errorsindata" type="radio" value="fix errors and submit a new file">
+        <input class="govuk-radios__input" id="fix-errors" name="errordata" type="radio" value="fix">
         <label class="govuk-label govuk-radios__label" for="fix-errors">
         Fix errors and submit a new file
       </label>
       </div>
       <!-- <div class="govuk-radios__divider">or</div> -->
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="submit-file" name="errorsindata" type="radio" value="submit this file anyyway">
+        <input class="govuk-radios__input" id="submit-file" name="errordata" type="radio" value="submit">
         <label class="govuk-label govuk-radios__label" for="submit-file">
         Submit this file anyway (You may want to do this if your errors are happening because of a known issue.)
       </label>
@@ -66,13 +66,19 @@
       </div>
   </fieldset>
 			</div>
-<button class="govuk-button">
+<a href="#" class="govuk-button" >
   Continue
-</button>
+</a>
+
+<script type="text/javascript">
+
+</script>
 
 		</form>
 
     </div>
+
+
 
 
 	  <div class="govuk-grid-column-one-third">
