--- a/app/views/12-0-0/your_files_uploading_checking_errors.html
+++ b/app/views/12-0-0/your_files_uploading_checking_errors.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
 
   <h2 class="govuk-heading-xl">
-    Just checking for errors…
+    Checking for errors...
   </h2>
 
 	  <!--<p>{{ uploadingFile }}</p>-->
@@ -23,7 +23,7 @@
     {
         window.location="./theres_a_problem.html";
     }
-    setTimeout('Redirect()', 5000);   
+    setTimeout('Redirect()', 5000);
 </script>
 
 
