errors update 7th Jane

--- a/app/views/12-0-0/return-period.html
+++ b/app/views/12-0-0/return-period.html
@@ -37,8 +37,9 @@
     <h2 class="govuk-heading-l" id="submission">Current submissions</h2>
       <p>Find all the files submitted on your account and their reports below. For final reports, see the ‘Past submissions’ tab.</p>
 
-      <h3 class="govuk-heading-m">2018/19 submissions<span class="govuk-caption-l">RO3</span></h3>
-      <p class="">You haven’t submitted any files for this submission period yet. <a href="#" >Submit a file</a></p>
+      <h3 class="govuk-heading-m">2018/19 submissions</h3>
+      <!-- <span class="govuk-caption-l">RO3</span>
+      <p class="">You haven’t submitted any files for this submission period yet. <a href="#" >Submit a file</a></p> -->
 
       <span class="govuk-caption-l">RO2</span>
 
