--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,7 +30,7 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Twix 12.0.0<p>27/12/2018</p></th>
         <td class="govuk-table__cell ">
-            <p>Private Beta - stopped 01/12/18</p>
+            <p>Private Beta - in progress 07/01/19</p>
             <ul class="govuk-list govuk-list--bullet">
                 <!-- <li></li> -->
                 <li><a href="12-0-0/start.html">Updated start page content</a></li>
@@ -38,7 +38,7 @@
                 <li><a href="12-0-0/ilr_data_submitted.html">Email info highlighted</a></li>
                 <li><a href="12-0-0/return-period.html">Updated the table view to cards type view</a></li>
                 <li><a href="12-0-0/"></a>Updated telephone number with a link</li>
-                <li><a href="12-0-0/"></a></li>
+                <!-- <li><a href="12-0-0/"></a></li> -->
                 <!-- <li></li>
                 <li></li> -->
             </ul>
