--- a/app/views/12-0-0/theres_a_problem.html
+++ b/app/views/12-0-0/theres_a_problem.html
@@ -54,7 +54,7 @@
 
     <a href="./choose_file_to_upload.html" type="submit" class="govuk-button">Upload an updated file</a> -->
 
-    <form action="choose_file_to_upload" method="get" class="form">
+    <form id="select-something" action="choose_file_to_upload" method="get" class="form">
 			<div id="formError" class="govuk-form-group">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
