--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,25 +27,39 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
+    <!-- <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Twix 12.0.0<p>27/12/2018</p></th>
         <td class="govuk-table__cell ">
             <p>Private Beta - in progress 07/01/19</p>
             <ul class="govuk-list govuk-list--bullet">
-                <!-- <li></li> -->
                 <li><a href="12-0-0/start.html">Updated start page content</a></li>
                 <li><a href="12-0-0/theres_a_problem.html">Removed error with grey box and added into exclamation text</a></li>
                 <li><a href="12-0-0/ilr_data_submitted.html">Email info highlighted</a></li>
                 <li><a href="12-0-0/return-period.html">Updated the table view to cards type view</a></li>
                 <li><a href="12-0-0/"></a>Updated telephone number with a link</li>
-                <!-- <li><a href="12-0-0/"></a></li> -->
-                <!-- <li></li>
-                <li></li> -->
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="12-0-0/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="./12-0-0/start.html">Start now</a></td>
+    </tr> -->
+
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Fudge 11.3.0<p>15/01/2019</p></th>
+        <td class="govuk-table__cell ">
+            <p>Private Beta - in progress 01/12/18</p>
+            <ul class="govuk-list govuk-list--bullet">
+
+                <li><a href="11-2-0/start.html">Updated start page content</a></li>
+                <li><a href="11-2-0/return-period.html">Added reports history and tabs</a></li>
+                <li><a href="11-2-0/return-period.html">Moved help and support to top of page</a></li>
+                <li><a href="11-2-0/return-period.html">Updated content for paragraphs</a></li>
+                <li><a href="11-2-0/return-period.html">Tables stretched to full width</a></li>
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="11-3-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./11-3-0/start.html">Start now</a></td>
     </tr>
+
 
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.2.0<p>28/11/2018</p></th>
