links tweaked on 11-03

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -46,14 +46,12 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.3.0<p>15/01/2019</p></th>
         <td class="govuk-table__cell ">
-            <p>Private Beta - in progress 01/12/18</p>
+            <p>Private Beta - Stopped 15/01/2019</p>
             <ul class="govuk-list govuk-list--bullet">
-
-                <li><a href="11-2-0/start.html">Updated start page content</a></li>
-                <li><a href="11-2-0/return-period.html">Added reports history and tabs</a></li>
-                <li><a href="11-2-0/return-period.html">Moved help and support to top of page</a></li>
-                <li><a href="11-2-0/return-period.html">Updated content for paragraphs</a></li>
-                <li><a href="11-2-0/return-period.html">Tables stretched to full width</a></li>
+                <li><a href="11-3-0/return-period.html">Added reports history and tabs</a></li>
+                <li><a href="11-3-0/return-period.html">Moved help and support to top of page</a></li>
+                <li><a href="11-3-0/return-period.html">Updated content for paragraphs</a></li>
+                <li><a href="11-3-0/return-period.html">Tables stretched to full width</a></li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="11-3-0/contents.html">Contents</a></td>
