--- a/app/views/index.html
+++ b/app/views/index.html
@@ -44,11 +44,26 @@
     </tr> -->
 
     <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Fudge 11.4.0<p>15/01/2019</p></th>
+        <td class="govuk-table__cell ">
+            <p>Private Beta - in progress 31/01/2019</p>
+            <ul class="govuk-list govuk-list--bullet">
+
+                <li><a href="11-4-0/return-period.html">Moved help and support to top of page</a></li>
+                <li><a href="11-4-0/return-period.html">Updated content for paragraphs</a></li>
+                <li><a href="11-4-0/return-period.html">Tables stretched to full width</a></li>
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="11-4-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./11-4-0/start.html">Start now</a></td>
+    </tr>
+
+    <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.3.0<p>15/01/2019</p></th>
         <td class="govuk-table__cell ">
             <p>Private Beta - Stopped 15/01/2019</p>
             <ul class="govuk-list govuk-list--bullet">
-                
+
                 <li><a href="11-3-0/return-period.html">Moved help and support to top of page</a></li>
                 <li><a href="11-3-0/return-period.html">Updated content for paragraphs</a></li>
                 <li><a href="11-3-0/return-period.html">Tables stretched to full width</a></li>
