uber happy path

--- a/app/views/11-4-0/your_files_uploading.html
+++ b/app/views/11-4-0/your_files_uploading.html
@@ -21,7 +21,8 @@
         <script type="text/javascript">
     function Redirect()
     {
-        window.location="./theres_a_problem.html";
+        window.location="./ilr_data_submitted_clean"; 
+        // above url was ./theres_a_problem.html //
     }
     setTimeout('Redirect()', 3000);
 </script>
