--- a/app/views/11-4-0/ilr_data_submitted_clean.html
+++ b/app/views/11-4-0/ilr_data_submitted_clean.html
@@ -16,12 +16,12 @@
           </h2>
           <div class="govuk-panel__body">
 			  Submission reference: 23693
-           
+
           </div>
-        </div>		
+        </div>
 <p>File: <span class="govuk-!-font-weight-bold">ILR-12345678-1819-20180806-151209-02.XML</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Sam Smith</span></p>
-<p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p>
+<p>At: <span class="govuk-!-font-weight-bold">10:30am on Wednesday 13 March 2019</span></p>
         <p>We didn’t find any errors or warnings for the data in your file.</p>
 
 <h3 class="govuk-heading-m">What happens next?</h3>
