--- a/app/views/11-4-0/ilr_data_submitted.html
+++ b/app/views/11-4-0/ilr_data_submitted.html
@@ -1,10 +1,11 @@
-{% extends "./layout_noback_signedin.html" %}
+{% extends "./layout_feedback.html" %}
 
 {% block pageTitle %}
   Data Collections Transformation Prototype
 {% endblock %}
 
 {% block content %}
+
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -14,12 +15,12 @@
           </h2>
           <div class="govuk-panel__body">
 			  Submission reference: 23693
-           
+
           </div>
-        </div>		
+        </div>
 <p>File: <span class="govuk-!-font-weight-bold">ILR-12345678-1819-20180806-151209-02.XML</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Sam Smith</span></p>
-<p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p> 
+<p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p>
 
 <h3 class="govuk-heading-m">What happens next?</h3>
 		<p>We’ve sent an email to sam.smith@college.ac.uk to confirm we’ve received your file.</p>
