--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -8,6 +8,8 @@ $govuk-global-styles: true;
 @import "patterns/check-your-answers";
 @import "patterns/task-list";
 @import "patterns/related-items";
+@import "patterns/funding-claims";
+// @import "patterns/message-banner";
 
 // Components that aren't in Frontend
 @import "components/cookie-banner";
@@ -380,7 +382,7 @@ progress::-moz-progress-bar { background: white; }
 }
 
 @media (min-width: 1025px) {
-  
+
   .feedback-wrapper {
     .feedback-container {
       .no-thank-you {
@@ -397,4 +399,9 @@ progress::-moz-progress-bar { background: white; }
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.information-banner {
+  @extend .govuk-error-summary;
+  border-color: govuk-colour("purple");
 }
