--- a/app/views/index.html
+++ b/app/views/index.html
@@ -42,6 +42,36 @@
         <td class="govuk-table__cell "><a href="12-0-0/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="./12-0-0/start.html">Start now</a></td>
     </tr> -->
+    <!-- <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Fudge 11.6.0<p>01/01/2019</p></th>
+        <td class="govuk-table__cell ">
+            <p>Private Beta - in progress 01/04/2019</p>
+            <ul class="govuk-list govuk-list--bullet">
+
+                <li><a href="11-6-0/start-fc">Funding claims</a> added</li>
+
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="11-6-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="11-6-0/start.html">Start now</a></td>
+    </tr> -->
+
+
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Fudge 11.5.0<p>01/01/2019</p></th>
+      <td class="govuk-table__cell ">
+          <p>Private Beta - in progress 01/04/2019</p>
+          <ul class="govuk-list govuk-list--bullet">
+
+              <li><a href="11-5-0/choose-period.html">ILR over lapping periods</a> added</li>
+              <li><a href="11-5-0/return-period.html">ESF round 2</a> added</li>
+              <li><a href="11-5-0/what_data_do_you_want_to_submit.html">Information banner</a> added</li>
+          </ul>
+      </td>
+      <td class="govuk-table__cell "><a href="11-5-0/contents.html">Contents</a></td>
+      <td class="govuk-table__cell "><a href="./11-5-0/start.html">Start now</a></td>
+    </tr>
+
 
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.4.0<p>15/01/2019</p></th>
