--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -48,7 +48,7 @@
   tag: {
     text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  html: 'This is a new service – your <a class="govuk-link" target="blank" href="https://www.smartsurvey.co.uk/s/dct-beta-feedback/">feedback</a> will help us to improve it.'
 }) }}
 <a href="#" onclick="goBack()" class="govuk-back-link">Back</a>
 {% endblock %}
