--- a/app/views/11-5-0/layout.html
+++ b/app/views/11-5-0/layout.html
@@ -38,7 +38,7 @@
     serviceName: serviceName,
     serviceUrl: "/",
     containerClasses: "govuk-width-container"
-  }) }}
+  })}}
 {% endblock %}
 
 {% block beforeContent %}
@@ -46,9 +46,10 @@
   tag: {
     text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" target="blank" href="https://www.smartsurvey.co.uk/s/dct-beta-feedback/">feedback</a> will help us to improve it.'
+  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
-
+{% include "./includes/account_info.html" %}
+<a href="#" onclick="goBack()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% if useAutoStoreData %}
@@ -67,7 +68,7 @@
 {% endif %}
 
 {% block bodyEnd %}
-
+{% include "./includes/version.html" %}
   {% block scripts %}
     {% include "includes/scripts.html" %}
     {% block pageScripts %}{% endblock %}
