--- a/app/views/11-5-0/layout_backtowhat.html
+++ b/app/views/11-5-0/layout_backtowhat.html
@@ -38,7 +38,7 @@
     serviceName: serviceName,
     serviceUrl: "/",
     containerClasses: "govuk-width-container"
-  }) }}
+  })}}
 {% endblock %}
 
 {% block beforeContent %}
@@ -48,7 +48,8 @@
   },
   html: 'This is a new service – your <a class="govuk-link" target="blank" href="https://www.smartsurvey.co.uk/s/dct-beta-feedback/">feedback</a> will help us to improve it.'
 }) }}
-
+{% include "./includes/account_info.html" %}
+<a href="what_data_do_you_want_to_submit" onclick="goBack()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% if useAutoStoreData %}
@@ -67,7 +68,7 @@
 {% endif %}
 
 {% block bodyEnd %}
-
+{% include "./includes/version.html" %}
   {% block scripts %}
     {% include "includes/scripts.html" %}
     {% block pageScripts %}{% endblock %}
