--- a/app/views/11-5-0/layout_idams.html
+++ b/app/views/11-5-0/layout_idams.html
@@ -46,8 +46,9 @@
   tag: {
     text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" target="blank" href="https://www.smartsurvey.co.uk/s/dct-beta-feedback/">feedback</a> will help us to improve it.'
+  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
+
 
 {% endblock %}
 
@@ -67,7 +68,7 @@
 {% endif %}
 
 {% block bodyEnd %}
-
+{% include "./includes/version.html" %}
   {% block scripts %}
     {% include "includes/scripts.html" %}
     {% block pageScripts %}{% endblock %}
