--- a/app/views/11-5-0/layout_noback.html
+++ b/app/views/11-5-0/layout_noback.html
@@ -67,7 +67,7 @@
 {% endif %}
 
 {% block bodyEnd %}
-
+{% include "./includes/version.html" %}
   {% block scripts %}
     {% include "includes/scripts.html" %}
     {% block pageScripts %}{% endblock %}
