added service down pages

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -66,6 +66,8 @@
               <li><a href="11-5-0/choose-period.html">ILR over lapping periods</a> added</li>
               <li><a href="11-5-0/return-period.html">ESF round 2</a> added</li>
               <li><a href="11-5-0/what_data_do_you_want_to_submit.html">Information banner</a> added</li>
+              <li><a href="11-5-0/service-problem-not-within-2-days.html">Service down not within 2 days of submission </a> page added</li>
+              <li><a href="11-5-0/service-problem-within-2-days.html">Service down within 2 days of submission </a> page added</li>
           </ul>
       </td>
       <td class="govuk-table__cell "><a href="11-5-0/contents.html">Contents</a></td>
